--- a/blank/skeleton/.github/workflows/prod.yaml
+++ b/blank/skeleton/.github/workflows/prod.yaml
@@ -13,7 +13,7 @@ jobs:
   get-latest-version:
     uses: coreeng/p2p/.github/workflows/p2p-get-latest-image-prod.yaml@v1
     with:
-      image-name: go-reference-app
+      image-name: blank-app
 
   prod:
     needs: [get-latest-version]
