--- a/go/web/skeleton/helm-charts/reference-app/templates/tests/functional.yaml
+++ b/go/web/skeleton/helm-charts/reference-app/templates/tests/functional.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   containers:
     - name: functional-tests
-      image: {{ .Values.registry }}/{{ .Values.functional.image }}:{{ .Values.tag }}
+      image: "{{ .Values.registry }}/{{ .Values.functional.image }}:{{ .Values.tag }}"
       env:
         - name: SERVICE_ENDPOINT
           value: "http://reference-service"
