testing: temporary fail blank template p2p

--- a/blank/skeleton/Makefile
+++ b/blank/skeleton/Makefile
@@ -48,6 +48,7 @@ create-ns-nft: ## Create namespace for NF tests
 
 .PHONY: lint
 lint: ## Linting the code
+	exit 1
 	@echo '### LINT ###'
 
 .PHONY: service-build
