Add p2p-image task to Makefiles to avoid the necessity to duplicate image name

--- a/blank/skeleton/Makefile
+++ b/blank/skeleton/Makefile
@@ -57,9 +57,11 @@ lint: ## Linting the code
 .PHONY: service-build
 service-build:
 	@echo '### SERVICE BUILD FOR FAST-FEEDBACK ###'
+	docker build --file Dockerfile --tag $(REGISTRY)/$(FAST_FEEDBACK_PATH)/$(image_name):$(image_tag) .
 
 .PHONY: service-push
 service-push: ## Push the service image
+	docker image push $(REGISTRY)/$(FAST_FEEDBACK_PATH)/$(image_name):$(image_tag)
 	@echo '### SERVICE PUSH FOR FAST-FEEDBACK ###'
 
 .PHONY: build-functional
@@ -98,7 +100,15 @@ deploy-prod: ## Deploy application to production environment
 
 .PHONY: p2p-promote-generic
 p2p-promote-generic:  ## Generic promote functionality
-	@echo '### PROMOTING APPLICATION FROM $(source_repo_path) TO $(dest_repo_path) ###'
+	@echo "$(red) Retagging version ${image_tag} from $(SOURCE_REGISTRY) to $(REGISTRY)"
+	export CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE=$(SOURCE_AUTH_OVERRIDE) ; \
+	gcloud auth configure-docker --quiet europe-west2-docker.pkg.dev; \
+	docker pull $(SOURCE_REGISTRY)/$(source_repo_path)/$(image_name):${image_tag} ; \
+	docker tag $(SOURCE_REGISTRY)/$(source_repo_path)/$(image_name):${image_tag} $(REGISTRY)/$(dest_repo_path)/$(image_name):${image_tag}
+	@echo "$(red) Pushing version ${image_tag}"
+	export CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE=$(DEST_AUTH_OVERRIDE) ; \
+	docker push $(REGISTRY)/$(dest_repo_path)/$(image_name):${image_tag}
+
 
 .PHONY: p2p-promote-to-extended-test
 p2p-promote-to-extended-test: source_repo_path=$(FAST_FEEDBACK_PATH)
