--- a/go/web/skeleton/Dockerfile
+++ b/go/web/skeleton/Dockerfile
@@ -6,12 +6,12 @@ COPY go.mod /app
 COPY go.sum /app
 
 
-RUN go build -o go-web /app/cmd/service/main.go
+RUN go build -o reference-app-go /app/cmd/service/main.go
 
 FROM alpine:3.18
 
-COPY --from=builder /app/go-web ./
+COPY --from=builder /app/reference-app-go ./
 
 RUN apk --no-cache add curl
 
-CMD ["./go-web"]
+CMD ["./reference-app-go"]
