- java reference app - upgraded to java 21

--- a/java/web/skeleton/Makefile
+++ b/java/web/skeleton/Makefile
@@ -94,24 +94,24 @@ push-nft: ## Push the NFT Docker image to an image registry
 
 .PHONY: deploy-functional
 deploy-functional: ## Deploy helm chart of the reference app to functional namespace
-	helm upgrade --install $(app_name) helm-charts/reference-app -n $(app_name)-functional --set registry=$(REGISTRY)/$(FAST_FEEDBACK_PATH) --set domain=$(BASE_DOMAIN) --set appUrlSuffix="-functional" --set tag=$(image_tag) --atomic
+	helm upgrade --install $(app_name) ./helm-charts/reference-app -n $(app_name)-functional --set registry=$(REGISTRY)/$(FAST_FEEDBACK_PATH) --set domain=$(BASE_DOMAIN) --set appUrlSuffix="-functional" --set tag=$(image_tag) --atomic
 	helm list -n $(app_name)-functional ## list installed charts in the given tenant namespace
 
 .PHONY: deploy-nft
 deploy-nft:  ## Deploy helm chart of the reference app to nft namespace
-	helm upgrade --install $(app_name) helm-charts/reference-app -n $(app_name)-nft --set registry=$(REGISTRY)/$(FAST_FEEDBACK_PATH) --set domain=$(BASE_DOMAIN) --set appUrlSuffix="-nft" --set tag=$(image_tag) --atomic
+	helm upgrade --install $(app_name) ./helm-charts/reference-app -n $(app_name)-nft --set registry=$(REGISTRY)/$(FAST_FEEDBACK_PATH) --set domain=$(BASE_DOMAIN) --set appUrlSuffix="-nft" --set tag=$(image_tag) --atomic
 	helm list -n $(app_name)-nft ## list installed charts in the given tenant namespace
 
 .PHONY: deploy-dev
 deploy-dev:  ## Deploy helm chart of the reference app to dev namespace
-	helm upgrade --install $(app_name) helm-charts/reference-app -n $(app_name)-dev --set registry=$(REGISTRY)/$(FAST_FEEDBACK_PATH)  --set domain=$(ENVIRONMENT).$(BASE_URL) --set appUrlSuffix="-dev" --atomic
+	helm upgrade --install $(app_name) ./helm-charts/reference-app -n $(app_name)-dev --set registry=$(REGISTRY)/$(FAST_FEEDBACK_PATH)  --set domain=$(ENVIRONMENT).$(BASE_URL) --set appUrlSuffix="-dev" --atomic
 	helm list -n $(app_name)-dev ## list installed charts in the given tenant namespace
 
 .PHONY: deploy-prod
 deploy-prod: ## Deploy helm chart of the reference app to production namespace
 	@echo $(image_tag)
 	@echo $(REGISTRY)/release
-	helm upgrade --install $(app_name) helm-charts/reference-app -n $(app_name) --set registry=$(REGISTRY)/$(PROD_PATH) --set domain=$(BASE_DOMAIN)  --set tag=$(image_tag) --atomic
+	helm upgrade --install $(app_name) ./helm-charts/reference-app -n $(app_name) --set registry=$(REGISTRY)/$(PROD_PATH) --set domain=$(BASE_DOMAIN)  --set tag=$(image_tag) --atomic
 	helm list -n $(app_name) ## list installed charts in the given tenant namespace
 
 .PHONY: p2p-promote-generic
