- java reference app - upgraded to java 21

--- a/java/web/skeleton/helm-charts/ref-app/templates/deployment.yml
+++ b/java/web/skeleton/helm-charts/ref-app/templates/deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: reference-service
-          image: {{ $registry }}/{{ .Values.service.image }}
+          image: "{{ $registry }}/{{ .Values.service.image }}:{{ .Values.tag }}"
           {{- if .Values.service.environmentVariables }}
           env:
             {{- range $key, $value := .Values.service.environmentVariables }}
