- java reference app - upgraded to java 21

--- a/java/web/skeleton/helm-charts/ref-app/templates/tests/functional.yaml
+++ b/java/web/skeleton/helm-charts/ref-app/templates/tests/functional.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: functional-tests
-      image: {{ .Values.registry }}/{{ .Values.functional.image }}
+      image: "{{ .Values.registry }}/{{ .Values.functional.image }}:{{ .Values.tag }}"
       env:
         - name: SERVICE_ENDPOINT
           value: "http://reference-service"
