--- a/java/web/skeleton/helm-charts/ref-app/templates/tests/nft.yaml
+++ b/java/web/skeleton/helm-charts/ref-app/templates/tests/nft.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: nft-tests
-      image: {{ .Values.registry }}/{{ .Values.nft.image }}
+      image: "{{ .Values.registry }}/{{ .Values.nft.image }}:{{ .Values.tag }}"
       env:
         - name: SERVICE_ENDPOINT
           value: "http://reference-service"
