--- a/java/web/skeleton/service/build.gradle
+++ b/java/web/skeleton/service/build.gradle
@@ -23,8 +23,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-jetty')
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0')
 	implementation('com.google.guava:guava:33.2.1-jre')
-	implementation('io.springfox:springfox-boot-starter:3.0.0')
 	implementation('com.zaxxer:HikariCP:5.1.0')
 	implementation('org.flywaydb:flyway-core:10.15.0')
 	implementation('org.flywaydb:flyway-database-postgresql:10.15.0')
