bug: fix typo in workflow

--- a/.github/workflows/trigger-render.yaml
+++ b/.github/workflows/trigger-render.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           github-token: ${{ secrets.TEMPLATES_RENDER_GH_TOKEN }}
           script: |
-            await github.rest.actions.createworkflowDispatch({
+            await github.rest.actions.createWorkflowDispatch({
               owner: 'coreeng',
               repo: 'reference-apps',
               workflow_id: 'render-templates.yaml',
