feature: change link to reference-apps

--- a/.github/workflows/trigger-render.yaml
+++ b/.github/workflows/trigger-render.yaml
@@ -15,7 +15,7 @@ jobs:
           script: |
             await github.rest.actions.createWorkflowDispatch({
               owner: 'coreeng',
-              repo: 'reference-apps',
+              repo: 'core-platform-reference-applications',
               workflow_id: 'render-templates.yaml',
               ref: 'main'
             })
