feature(java-web): make java-web template look more like template and not like reference-app
- remove unnecessary stuff – downstream, wiremock, etc
- make it easy to update values for the template

--- a/java/web/skeleton/service/src/main/resources/application.yaml
+++ b/java/web/skeleton/service/src/main/resources/application.yaml
@@ -5,10 +5,16 @@ management:
     web:
       base-path: /
       exposure:
-        include: health, metrics, prometheus
+        include: health, prometheus
   endpoint:
     status.enabled: true
     shutdown.enabled: false
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
   graphite:
     metrics:
       export:
